<!--
  ~ Copyright (c) 2018 Shaishav Gandhi
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  You may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions
  ~  and limitations under the License.
  -->

<resources>
    <string name="app_name">Be Better</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_lesson">AddLesson</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_details">Details</string>

    <string name="current_session">Current Session</string>
    <string name="minute">min</string>
    <string name="points">Points</string>
    <string name="daily_usage">Usage Today</string>
    <string name="average_daily_usage">Average Daily Usage</string>
    <string name="total_usage">Total Usage</string>
    <string name="total_points">Total Points</string>
    <string name="current_goal">Current Goal</string>
    <string name="set_goal">What is your daily usage goal?</string>
    <string name="goal_info">Setting a goal has been known to decrease mobile usage</string>
    <string name="give_permission">Give Permission</string>
    <string name="need_usage_permission">To function properly, BeBetter needs access to usage statistics.</string>
    <string name="permission_title">Next we\'ll need permission to get access to your usage statistics</string>
    <string name="permission_info">This is required so that BeBetter can show you detailed statistics about your usage patterns and help you reduce your mobile consumption</string>
    <string name="current_streak">Current Streak</string>
    <string name="day">days</string>
    <string name="welcome">Welcome To BeBetter</string>
    <string name="goal_error">Please enter a goal in minutes</string>
    <string name="usage_trend">Usage Trend</string>
    <string name="points_trend">Points Trend</string>
    <string name="level_heading">Experience Level</string>
    <string name="usage_summary">Usage Summary</string>
    <string name="yesterday_summary">See how you did yesterday!</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="usage">Usage</string>
    <string name="goal">Goal</string>
    <string name="unlocks_today">Unlocks Today</string>
    <string name="hit_your_goal">Awesome! You hit your goal!</string>

    <string name="beginner">Beginner</string>
    <string name="apprentice">Apprentice</string>
    <string name="intermediate">Intermediate</string>
    <string name="pro">Pro</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="legend">Legend</string>
    <string name="ultra_legend">Ultra Legend</string>
    <string name="average_summary_over">You used your phone %1$s more than your average of %2$s.</string>
    <string name="average_summary_under">Nice going! You used your phone %1$s less than your average of %2$s.</string>
    <string name="average_points_over">Woo! You earned %1$s more points than average of %2$s</string>
    <string name="average_points_under">Drats! You earned %1$s less points than average of %2$s</string>
    <string name="extended_streak">You extended your streak to %1$s days!</string>
    <string name="snapped_streak">You broke your streak! Dust it off and start back again!</string>
    <string name="highlight">Highlights</string>
    <string name="most_used_apps">Most Used Apps</string>

    <string name="title_activity_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_quote">Quote</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_experience_editor">Add Experience</string>
    <string name="web_client_id">625165464182-p0mhdhjfsc8b290j7sh76ik761n89e2g.apps.googleusercontent.com</string>
    <string name="enter_goal">Enter daily usage goal</string>
    <string name="next">Next</string>
</resources>
