<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Shaishav Gandhi
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  You may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions
  ~  and limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:background="@color/colorPrimary"
             android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="visible"
            android:padding="@dimen/padding_base"
            android:background="@color/colorPrimary">

        <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/title"
                android:text="@string/welcome"/>


        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                tools:text="Next we'll need permission to get access to your usage statistics" />

        <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_info"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="This is required so that BeBetter can show you detailed statistics about your usage patterns and help you reduce your mobile consumption" />


        <Button
                android:id="@+id/givePermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/give_permission"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/info"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"/>

        <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_large"
            android:foregroundGravity="center_horizontal"
            android:visibility="visible"
            tools:visibility="visible"
            android:src="@drawable/logo" />
</FrameLayout>