<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Shaishav Gandhi
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  You may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions
  ~  and limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginBottom="@dimen/margin_small"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_base">

            <ImageView
                android:id="@+id/image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:src="@drawable/nature"
                android:scaleType="centerCrop"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/heading"
                android:layout_marginStart="@dimen/margin_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                android:textAlignment="center"
                android:text="Yesterday"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/usageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_base"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                android:layout_marginTop="@dimen/margin_base"
                app:layout_constraintRight_toLeftOf="@+id/usageValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:textSize="18sp"
                android:capitalize="words"
                android:textColor="#404040"
                android:text="@string/usage"
                tools:text="Usage"/>

            <com.robinhood.ticker.TickerView
                android:id="@+id/usageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_base"
                app:layout_constraintLeft_toRightOf="@+id/usageLabel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/usageLabel"
                android:textColor="#404040"
                tools:text="34 min"
                android:text="0"
                android:textSize="18sp"
                app:ticker_defaultCharacterList="number"
                android:gravity="center" />

            <TextView
                android:id="@+id/goalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/usageLabel"
                app:layout_constraintTop_toBottomOf="@+id/usageLabel"
                android:layout_marginTop="@dimen/margin_base"
                app:layout_constraintRight_toLeftOf="@+id/goal_value"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:textSize="18sp"
                android:capitalize="words"
                android:textColor="#404040"
                android:text="@string/goal"/>

            <com.robinhood.ticker.TickerView
                android:id="@+id/goal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#404040"
                app:layout_constraintLeft_toRightOf="@+id/goalLabel"
                app:layout_constraintRight_toRightOf="@+id/usageValue"
                app:layout_constraintTop_toTopOf="@+id/goalLabel"
                tools:text="2 hr 34 min"
                android:text="0"
                android:textSize="18sp"
                app:ticker_defaultCharacterList="number"
                android:gravity="center" />

            <TextView
                android:id="@+id/pointsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#404040"
                android:capitalize="words"
                app:layout_constraintLeft_toLeftOf="@+id/goalLabel"
                app:layout_constraintTop_toBottomOf="@+id/goalLabel"
                android:layout_marginTop="@dimen/margin_base"
                app:layout_constraintRight_toLeftOf="@+id/points_value"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:textSize="18sp"
                android:text="@string/points"/>

            <com.robinhood.ticker.TickerView
                android:id="@+id/points_value"
                android:layout_width="wrap_content"
                android:textColor="#404040"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/pointsLabel"
                app:layout_constraintRight_toRightOf="@+id/usageValue"
                app:layout_constraintTop_toTopOf="@+id/pointsLabel"
                tools:text="54"
                android:text="0"
                android:textSize="18sp"
                app:ticker_defaultCharacterList="number"
                android:gravity="center" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
